# ELSA

./: .gitignore  .gitmodules  CMakeLists.txt  ELSA.slnx  README.md
ELSA/: CMakeLists.txt  ELSA.vcxproj  ELSA.vcxproj.filters
ELSA/src/: ELSA.h
ELSA/src/ELSA/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
